--- a/src/components/App.scss
+++ b/src/components/App.scss
@@ -1,5 +1,9 @@
-$cor-de-fundo: #efe9ca;
+@import "../styles/_reset";
+
+$cor-de-fundo: #F7F9FB;
 
 body {
+  font-family: Arial, Helvetica, sans-serif;
+  padding-top: 30px;
   background-color: $cor-de-fundo;
 }
