--- a/src/components/todo/components/Tarefa.scss
+++ b/src/components/todo/components/Tarefa.scss
@@ -1,7 +1,24 @@
+@import "../../../styles/_flexbox";
+
 .tarefaFeita {
   text-decoration: line-through;
 }
 
 .tarefaIncompleta {
   text-decoration: none;
+}
+
+.tarefaLine {
+  background: #eff1f2;
+  padding:5px 5px 5px 15px;
+  margin: 2px 0;
+  color: #000;
+  font-size: 14px;
+  text-transform: capitalize;
+  @include flexbox;
+  @include justify-content(space-between);
+
+  .deleteBtn {
+    color: #E62A2A;
+  }
 }
