--- a/src/components/sorter/sorter.scss
+++ b/src/components/sorter/sorter.scss
@@ -13,6 +13,7 @@
     border-radius: 4px;
     font-weight: bold;
     text-transform: uppercase;
+    text-align: center;
 
     &:hover {
       background: #847ecf;
